--- a/register.html
+++ b/register.html
@@ -44,6 +44,10 @@
                             <input type="password" id="reg-password" placeholder="Password" required>
                             <label for="reg-password">Password</label>
                         </div>
+                             <div class="form-group">
+         <input type="password" id="reg-confirm-password" placeholder="Confirm Password" required>
+         <label for="reg-confirm-password">Confirm Password</label>
+     </div>
                         <button type="submit">Sign Up</button>
                     </form>
                     <p id="register-message"></p>
